# mmda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_CN.md  pyproject.toml
notebook/: pre_class.ipynb  recitation1.ipynb  recitation2.ipynb  recitation3.ipynb  recitation4.ipynb  recitation5.ipynb  recitation6.ipynb  recitation7.ipynb
src/: generate_mesh.py  lec2_cl1.py  utils.py
