[project]
dependencies = [
    "codespell>=2.4.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.3",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
    "scienceplots>=2.2.1",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "sympy>=1.14.0",
    "threadpoolctl>=3.6.0",
    "toml-sort>=0.24.3",
    "wheel>=0.46.3",
]
description = "Code for MMDA course"
name = "mmda"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.1.0"

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "ans,passt,vas,VAS,te,fo,oder,als,som"

[tool.mypy]
exclude = ["third_party/"]
ignore_missing_imports = true
python_version = "3.12"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
